gcc/testsuite/g++.dg/template/error12.C
// PR c++/15044

template class <num_t> class a { num_t n; } // { dg-error "" }

